<resources>
    <string name="app_name">OneStarDelivery</string>

    <!--    bottom nav title-->
    <string name="home_bot_nav">Home</string>
    <string name="wish_list_bot_nav">Wishlist</string>
    <string name="campaigns_bot_nav">Campaigns</string>
    <string name="cart_bot_nav">Cart</string>
    <string name="account_bot_nav">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>