<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/home_bot_nav" />
    <item
        android:id="@+id/wishlist_fragment"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/wish_list_bot_nav" />
    <item
        android:id="@+id/campaign_fragment"
        android:icon="@drawable/ic_baseline_campaign_24"
        android:title="@string/campaigns_bot_nav" />
    <item
        android:id="@+id/cart_fragment"
        android:icon="@drawable/ic_outline_shopping_cart_24"
        android:title="@string/cart_bot_nav" />
    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:title="@string/account_bot_nav" />

</menu>